<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/mainDialog_listColor"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:background="#F1F1F1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainDialog_textColor" />

    <TextView
        android:id="@+id/mainDialog_textColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/main_dialog_textColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/mainDialog_radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainDialog_listColor">

        <RadioButton
            android:id="@+id/mainDialog_radioGroup_Line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/main_buttonLine" />

        <RadioButton
            android:id="@+id/mainDialog_radioGroup_Bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_buttonBar" />
    </RadioGroup>

    <Button
        android:id="@+id/mainDialog_buttonCommit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:enabled="true"
        android:text="@string/main_dialog_buttonCommitSuicide"
        app:layout_constraintEnd_toEndOf="@+id/mainDialog_listColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainDialog_radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>